# smg

./: .gitignore  Cargo.toml  ContributionsRequests.md  README.md  ScratchNotes.md
archive/initial-commit/: dep_config.rs  dep_main.rs  main.rs  sitemap_json.rs
src/initial-commit/: config.rs
src/main/: scanner.rs  sitemap_xml.rs
tests/: testcases.md
tests/NextApp/: package-lock.json  package.json  smg.config.json
tests/NextApp/src/app/: SitemapList.tsx  layout.tsx  page.tsx
tests/NextApp/src/app/example/: page.tsx
tests/NextApp/src/app/exclude/: page.tsx
tests/NextApp/src/app/exclude-children/: page.tsx
tests/NextApp/src/app/exclude-children/exclude-1/: page.tsx
tests/NextApp/src/app/exclude-children/exclude-1/exclude-1-child-1/: page.tsx
tests/NextApp/src/app/exclude-children/exclude-1/exclude-1-child-2/: page.tsx
tests/NextApp/src/app/exclude-children/exclude-2/: page.tsx
tests/NextApp/src/app/exclude-children/exclude-3/: page.tsx
tests/NextApp/src/app/include/: page.tsx
tests/NextApp/src/app/include/sneaky-me/: page.tsx
tests/NextApp/src/sitemaps/: sitemap.json  sitemap.xml
