[package]
name = "smg"
version = "0.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xml-rs = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11.1"